src/test/ui/feature-gates/feature-gate-global_asm.stderr
error[E0658]: use of unstable library feature 'global_asm': `global_asm!` is not stable enough for use and is subject to change
  --> $DIR/feature-gate-global_asm.rs:1:1
   |
LL | global_asm!("");
   | ^^^^^^^^^^
   |
   = note: see issue #35119 <https://github.com/rust-lang/rust/issues/35119> for more information
   = help: add `#![feature(global_asm)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
