src/test/ui/feature-gates/feature-gate-global_asm.rs
global_asm!(""); //~ ERROR `global_asm!` is not stable

fn main() {}
